Issue #25 Awkward wrapping of category tiles with different length titles

--- a/style/styles.css
+++ b/style/styles.css
@@ -441,3 +441,4 @@ nav#page-header {
 .nav-tabs.nav-justified {width: auto;}
 body div math {display:none;visibility:hidden;}
 .block .minicalendar th, .block .minicalendar td  {padding: 0px;}
+.flexibasecats.panel {height: 230px;}
